2009-02-02  Ghee Teo  <ghee.teo@sun.com>

	Uprev to 0.1.6. Now provide 'refresh' method properly and this is the
	one to use as svcadm restart <fmri> boiled down to a 'stop' and 'start'
	calls for these services and is not what is required.
	* configure.in:
	* desktop-mime-cache/desktop-mime-cache:
	* desktop-mime-cache/desktop-mime-cache.xml:
	* gconf-cache/gconf-cache:
	* gconf-cache/gconf-cache.xml:
	* icon-cache/icon-cache:
	* icon-cache/icon-cache.xml:
	* input-method/input-method-cache:
	* input-method/input-method-cache.xml:
	* mime-types-cache/mime-types-cache:
	* mime-types-cache/mime-types-cache.xml:
	* pixbuf-loaders/pixbuf-loaders-installer:
	* pixbuf-loaders/pixbuf-loaders-installer.xml:

2009-01-28  Ghee Teo  <ghee.teo@sun.com>

	More changes required to fix 2399.
	Changed refresh option to restart instead to fit into SMF philosophy.
	bumped version to 0.1.5
	* configure.in:
	* desktop-mime-cache/desktop-mime-cache.xml:
	* gconf-cache/gconf-cache.xml:
	* icon-cache/icon-cache.xml:
	* input-method/input-method-cache.xml:
	* mime-types-cache/mime-types-cache.xml:
	* pixbuf-loaders/pixbuf-loaders-installer.xml:

2009-01-28  Ghee Teo  <ghee.teo@sun.com>

	Fixes d.o.o 2399 by adding in refresh option.
	bump version to 0.1.4
	* configure.in:
	* desktop-mime-cache/desktop-mime-cache:
	* gconf-cache/gconf-cache:
	* icon-cache/icon-cache:
	* input-method/input-method-cache:
	* mime-types-cache/mime-types-cache:
	* pixbuf-loaders/pixbuf-loaders-installer:

2008-11-07 Erwann Chenede - <erwann.chenede@sun.com>
      
       * configure.in: bump to 0.1.3

2008-11-04 Erwann Chenede - <erwann.chenede@sun.com>

       * icon-cache/icon-cache: fix for 4058

2008-09-17  Ghee Teo <ghee.teo@sun.com>

	Create new tarball with CDDL COPYING file.	
	* configure.in: bump to 0.1.2
	* COPYING: CDDL license file.

2008-06-27  Laszlo (Laca) Peter  <laca@sun.com>

	* configure.in: bump to 0.1.1

2008-06-27 Erwann Chenede - <erwann.chenede@sun.com>
